2019-03-18 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/pdk/gen.c:
	  Improve |=, &=, ^=.

2019-03-18 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/pdk/gen.c,
	  src/pdk/ralloc2.cc,
	  support/regression/tests/bug3564104.c:
	  Improve register allocation for shift and addition, RFE #608.
	* support/valdiag/valdiag.py,
	  support/valdiag/Makefile.in:
	  Enable testing of diagnostics for pdk14.

2019-03-17 Philipp Klaus Krause <pkk AT spth.de>

	* src/pdk/ralloc2.cc,
	  src/pdk/gen.c,
	  support/regression/tests/gcc-torture-execute-20020508-2.c,
	  support/regression/tests/gcc-torture-execute-pr41750.c:
	  Improve register allocation, RFE #611, RFE #612, RFE #606.

2019-03-17 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* sim/ucsim/aclocal.m4,
	* sim/ucsim/configure.ac,
	* sim/ucsim/configure: reverting previous changes; go back to
	  using default C++ dialect instead of C++11

2019-03-17 Philipp Klaus Krause <pkk AT spth.de>

	* src/pdk/ralloc2.cc,
	  src/pdk/gen.c,
	  support/regression/tests/gcc-torture-execute-pr70005.c:
	  Better register allocation for assignment, RFE #615, fix some bugs in code generation.

2019-03-16 Philipp Klaus Krause <pkk AT spth.de>

	* src/pdk/ralloc2.cc,
	  src/pdk/gen.c:
	  Better register allocation for surviving ifx operands, RFE #610.

2019-03-16 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/gcc-torture-execute-divcmp-2.c:
	  Enable passing test for pdk14.
	* src/z80/gen.c,
	  support/regression/tests/z88dk.c,
	  support/regression/tests/bug-2881.c:
	  Fix bug #2881.

2019-03-16 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* sim/ucsim/aclocal.m4,
	* sim/ucsim/configure.ac,
	* sim/ucsim/configure: request c++11 dialect

2019-03-15 Philipp Klaus Krause <pkk AT spth.de>

	* src/pdk/gen.c:
	  Cheaper adjustment of pointer in p.
	* device/include/limits.h,
	  support/regression/tests/bug-2885.c:
	  Fix bug #2885.
